tests/cases/semantic/invalid/duplicate_parameter/main.nm
@entry
fn main(value: int, value: int) {}
